--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 html,
 body {
-  height: 100vh;
-  margin: 0;
-  background-color: #f3f4f4;
+    height: 100vh;
+    margin: 0;
+    background-color: #f3f4f4;
 }
 
 body {
@@ -106,10 +106,10 @@ nav a {
 }
 
 .banner-text {
-   color:#ffffff;
-   font-size: 1,6rem;
-   line-height: 1,5rem;
-   margin-bottom: 40px;
+    color:#ffffff;
+    font-size: 1,6rem;
+    line-height: 1,5rem;
+    margin-bottom: 40px;
 }
 
 .cta-banner {
@@ -140,16 +140,16 @@ nav a {
 }
 
 .explore {
-  text-align: center; 
-  font-size: 32px;
+    text-align: center; 
+    font-size: 32px;
 } 
 
 .info-container {
-   display: flex;
-   flex-direction: row;
-   gap: 30px;
-   padding: 20px 70px;
-   justify-content: center;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    padding: 20px 70px;
+    justify-content: center;
 }
 
 .info-card {
@@ -157,8 +157,7 @@ nav a {
     flex: 1;
     background-color: #ffffff;
     border-top: 10px solid #fb9b50;
-
-    }
+}
 
 .text_card {
     font-size: 22px;  
@@ -172,9 +171,9 @@ nav a {
  }
 
 .info_image {
-   width: 100%;
-   height: 360px;
-   object-fit: cover;
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
 }
 
 /* Welcome container main */
@@ -194,7 +193,7 @@ nav a {
     justify-content: center;
     padding: 20px 50px 20px 50px;
     font-size: 18px;
-    background-color: #ffffff;
+    background-color: rgba(1,161,177,.2);
     height: 500px;
 }
 
@@ -204,7 +203,7 @@ nav a {
     color:#fb9b50; 
     margin-top: 10px;  
 }
-/* fix the text so it doesn't overflow when the site is scaled down */
+
 .left-container>p {
 }
 
@@ -215,8 +214,9 @@ nav a {
 }
 
 .about-us_image {
-   display: flex;
-   flex: 1;
+    display: flex;
+    flex: 1;
+    height: 500px;
 }
 
 /* Info-container main */
@@ -251,22 +251,23 @@ margin-bottom: 30px;
 .line-explore,
 .line-contact,
 .line-visit-heading {
-width: 60%;
-display: block;
-border-top: 1px solid;
-margin-bottom: 5px;
+    width: 60%;
+    display: block;
+    border-top: 1px solid;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .gallery-container {
-   display: flex;
-   justify-content: center; 
-   flex-wrap: wrap;
-   padding: 30px 30px;
+    display: flex;
+    justify-content: center; 
+    flex-wrap: wrap;
+    padding: 30px 30px;
 }
 
 .gallery-img {
-   flex: 1;
-   padding: 15px 15px;
+    flex: 1;
+    padding: 15px 15px;
 }
 
 .gallery-img>img {
@@ -279,6 +280,33 @@ margin-bottom: 5px;
     text-align: center;
     font-size: 24px;
     margin-bottom: 30px;
+}
+
+.events-container {
+    max-width: 800px;
+    display: flex;
+    margin: 0 auto;
+    
+}
+
+.circle-conteiner {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    background-color:#01a1b1;
+    color:#ffffff;
+    margin-bottom: 30px;
+}
+
+
+.events-text {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .line-events {
@@ -299,9 +327,9 @@ margin-bottom: 5px;
 
 .exhibition-image,
 .explore-image {
-   display: flex;
-   flex-direction: column;
-   flex: 1;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .exhibition_image,
@@ -338,19 +366,39 @@ margin-bottom: 5px;
 }
  
 /* Visit */
-.visit-info {
+.visit-container,
+.visit-food-container {
+    max-width: 1000px;
     display: flex;
+    margin: 0 auto;
 }
 
-.visit-image {
-    display: flex;
-
+.figure {
+    margin: 0px;
 }
 
 
+.visit-info,
+.visit-food-info {
+    flex: 1;
+    padding: 20px;
+}
 
+.visit_image {
+    width: 100%;
+    height: 600px;
+}
 
+.line-visit {
+    width: 90%;
+    display: block;
+    border-top: 1px solid; 
+    margin-bottom: 30px; 
+}
 
+.events-text {
+ 
+}
 
 /* Contact */
 .contact-info-conteiner {
@@ -360,8 +408,8 @@ margin-bottom: 5px;
 }
 
 .contact-info-content {
-flex: 1;
-padding: 20px;
+    flex: 1;
+    padding: 20px;
 }
 
 .contact-info-content>p {
@@ -369,11 +417,11 @@ padding: 20px;
 }
 
 .contact-us-container {
-display: flex;
-flex-direction: column;
-width: 100%;
-line-height: 1,8;
-padding: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    line-height: 1,8;
+    padding: 10px;
 }
 
 .contact-img-container {
@@ -381,7 +429,7 @@ padding: 10px;
 }
 
 .contact-image {
-width: 100%;
+    width: 100%;
 }
 
 .contact-input-style {
@@ -396,18 +444,13 @@ input, textarea, select {
 }
 
 .cta_send {
-   margin-top: 15px; 
-   border-radius: 20px;
-   color: #ffffff;
-   background-color: #fb9b50;
-   height: 40px;
-   width: 110px;
+    margin-top: 15px; 
+    border-radius: 20px;
+    color: #ffffff;
+    background-color: #fb9b50;
+    height: 40px;
+    width: 110px;
 }
-
-
-
-
-
 
 /* Footer */
 .footer-container {
@@ -426,20 +469,20 @@ input, textarea, select {
 
 .help {
     color: #00262D;  
+    flex: 1;
  }
 
 .follow-us {
-
-
+    flex: 1;
 }
 
 .visit-us {
-
-   
+    flex: 1;  
 }
 
+
 .icon  {
-   text-decoration: none;
+    text-decoration: none;
 }
 
 .line-footer {
