--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,12 @@ html,
 body {
     height: 100vh;
     margin: 0;
-    background-color: #f3f4f4;
 }
 
 body {
     font-family: "lato", Arial, Helvetica, sans-serif;
+    line-height: 1.5; 
+    background-color: #f3f4f4;
 }
 
 header, footer {
@@ -16,6 +17,11 @@ header, footer {
 /* Home header */
 .menu-checkbox, .hamburger-icon {
     display: none;
+}
+
+.fa-solid, .fas {
+    font-size: 39px;
+    color: #00262D;
 }
 
 .logo {
@@ -38,7 +44,6 @@ nav a {
     text-decoration: none;
     color: #00262D;
     font-weight: bold;
-
 }
 
 .active {
@@ -55,7 +60,8 @@ nav a {
     border-radius: 30px;
     width: 10%;
     padding: 5px 5px;
-    margin-left: 800px;
+    margin-left: 400px;
+    margin-bottom: 15px;
     height: 20px;
     border-color: #01a1b1;
     font-size: 1em;
@@ -70,6 +76,7 @@ nav a {
     border-radius: 30px;
     padding: 5px 20px 5px 20px;
     margin-right: 40px;
+    margin-bottom: 15px;
 }
 
 .banner-img-container {
@@ -95,8 +102,9 @@ nav a {
     font-size: 1,8rem;
     line-height: 1,5rem;
     margin-top: 5px;
-    }
-
+    font-weight: bold;
+}
+    
 .banner-lare-text {
     font-size: 3rem;
     color:#ffffff;
@@ -107,7 +115,7 @@ nav a {
 
 .banner-text {
     color:#ffffff;
-    font-size: 1,6rem;
+    font-size: 18px;
     line-height: 1,5rem;
     margin-bottom: 40px;
 }
@@ -119,6 +127,7 @@ nav a {
     text-transform: uppercase;
     border-radius: 20px;
     padding: 5px 20px 5px 20px;
+    font-weight: bold;
 }
 
 /* Home main */
@@ -131,14 +140,14 @@ nav a {
     flex-direction: column;
     padding: 20px;
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     background-color:#01a1b1;
     color:#ffffff;
     margin-bottom: 30px;
     text-align: center;
     position: relative;
-    margin-right: 200px;
+    margin-right: 120px;
     margin-top: 40px;
 }
 
@@ -150,10 +159,25 @@ nav a {
     margin: 0px;
 }
 
-.events-info {
+.events-info,
+.events-text {
     flex: 1;
     margin-top: 40px;
     text-align: center;
+    font-size: 18px;
+    margin-bottom: 50px;
+}
+
+.events-info>h2 {
+   font-size: 22px;
+}
+
+.events-info-line {
+    width: 100%;
+    display: block;
+    border-top: 1px solid;
+    margin-bottom: 5px;
+    border-color:#01a1b1;
 }
 
 .cta_events {
@@ -163,6 +187,7 @@ nav a {
     text-transform: uppercase;
     border-radius: 20px;
     padding: 5px 20px 5px 20px; 
+    font-weight: bold;
 }
 
 .explore {
@@ -226,6 +251,7 @@ nav a {
     font-size: 18px;
     background-color: rgba(1,161,177,.2);
     max-height: 600px;
+    
 }
 
 .left-container>h5 {
@@ -242,7 +268,9 @@ nav a {
     margin-top: 10px;   
 }
 
-.left-container>p {
+.welcome-heading {
+    font-size: 36px;
+    margin: 0;
 }
 
 .right-container {
@@ -266,17 +294,36 @@ nav a {
     padding-top: 40px;
     padding-bottom: 30px;
     justify-content: space-around;
-    background-color: #ffffff;
+    background-color: rgba(1,161,177,.2);
+}
+
+.fa-users,
+.fa-user,
+.fa-utensils,
+.fa-palette {
+    color:#01a1b1;
+    font-size: 20px;  
+}
+
+.information-line {
+    color:#00262D;
+    border-top: 1px solid;
 }
 
 .information-card {
- text-align: center;
+    text-align: center;
+}
+
+.information-card>p {
+    font-weight: bold;
+    color: #00262D;
 }
 
 /* Gallery main */
 .gallery-heading,
 .events-heading,
 .exhibition-heading,
+.explore-heading,
 .contact-us-heading,
 .visit-heading  {
 text-align: center;
@@ -284,11 +331,10 @@ font-size: 32px;
 margin-bottom: 30px;
 }
 
-.line-gallery,
 .line-events-heading,
-.line-exhibition,
-.line-explore,
-.line-contact,
+.line-exhibition-heading,
+.line-explore-heading,
+.line-contact-heading,
 .line-visit-heading {
     width: 60%;
     display: block;
@@ -297,11 +343,22 @@ margin-bottom: 30px;
     margin-top: 30px;
 }
 
+.line-gallery-heading {
+    width: 60%;
+    display: block;
+    border-top: 1px solid;
+    margin-bottom: 5px;
+    margin-top: 30px;   
+}
+
 .gallery-container {
     display: flex;
     justify-content: center; 
     flex-wrap: wrap;
-    padding: 30px 30px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    padding-top: 0px;
 }
 
 .gallery-img {
@@ -318,27 +375,25 @@ margin-bottom: 30px;
 .events_heading {
     text-align: center;
     font-size: 24px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .events-container {
     max-width: 800px;
     display: flex;
-    margin: 0 auto;
+    margin: 0 auto;  
     
 }
 
-.events-text {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+.line-events {
+    width: 100%;
+    display: block;
+    border-top: 2px solid;
+    color: #01a1b1;
 }
 
-.line-events {
-    width: 40%;
-    display: block;
-    border-top: 1px solid;
-    margin-bottom: 5px; 
+.cta_events {
+ 
 }
 
 /* Exhibition spaces, Explore main */
@@ -348,7 +403,8 @@ margin-bottom: 30px;
     display: flex;
     padding-top: 20px;
     padding-bottom: 20px;
-    justify-content: center;
+    justify-content: center; 
+    margin-bottom: 30px; 
 }
 
 .exhibition-image,
@@ -366,6 +422,7 @@ margin-bottom: 30px;
     flex: 1;
     max-height: 500px;
     max-width: 500px;
+    object-fit: cover;
 }
 
 .exhibition-text,
@@ -383,8 +440,13 @@ margin-bottom: 30px;
     max-width: 500px;
 }
 
-.line-exhibition-heading,
-.line-explore-heading {
+.exhibition-text>h2,
+.explore-text>h2 {
+    margin-bottom: 5px;
+}
+
+.line-exhibition,
+.line-explore {
     width: 40%;
     display: block;
     border-top: 4px solid;
@@ -392,7 +454,32 @@ margin-bottom: 30px;
     margin-top: 1px;
     color: #01a1b1;  
 }
- 
+
+.line-exhibition-container,
+.line-explore-container {
+    width: 96%;
+    display: block;
+    border-top: 1px solid;
+    margin-bottom: 30px;
+    margin-top: 30px;  
+}
+
+.cta-item {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.cta-tickets {
+    color: #ffffff;
+    background-color: #fb9b50;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 20px;
+    padding: 5px 20px 5px 20px; 
+    font-weight: bold;
+}
+
 /* Visit */
 .visit-container,
 .visit-food-container {
@@ -404,7 +491,6 @@ margin-bottom: 30px;
 .figure {
     margin: 0px;
 }
-
 
 .visit-info,
 .visit-food-info {
@@ -424,10 +510,6 @@ margin-bottom: 30px;
     margin-bottom: 30px; 
 }
 
-.events-text {
- 
-}
-
 /* Contact */
 .contact-info-conteiner {
     display: flex;
@@ -441,7 +523,7 @@ margin-bottom: 30px;
 }
 
 .contact-info-content>p {
-    marign-left: 10px;
+    padding-left: 10px;
 }
 
 .contact-us-container {
@@ -468,7 +550,8 @@ input, textarea, select {
     border-radius: 5px;
     border: 1px solid;
     padding: 10px;
-    margin: 5px 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .cta_send {
@@ -480,6 +563,12 @@ input, textarea, select {
     width: 110px;
 }
 
+.fa-at,
+.fa-phone-volume,
+.fa-clock {
+    font-size: 20px;
+}
+
 /* Footer */
 .footer-container {
     display: grid;
@@ -489,30 +578,129 @@ input, textarea, select {
     gap: 10em;
     background-color: #ffff;
     color: #00262D;
+    padding-bottom: 20px;
+ }
+
+ .footer-heading {
+    font-size: 22px;
+    margin-bottom: 10px;
+    color: #00262D;
  }
     
  .help>ul {
     display: block;
+    margin: 0;
+    padding:0; 
  }
 
 .help {
     color: #00262D;  
-    flex: 1;
+    flex: 1; 
+    line-height: 1.6;
  }
 
 .follow-us {
-    flex: 1;
+    flex: 1; 
+    line-height: 1.6; 
 }
 
 .visit-us {
-    flex: 1;  
-}
-
+    flex: 1; 
+    line-height: 1.6;
+}  
 
 .icon  {
     text-decoration: none;
+    color:#00262D;
 }
 
 .line-footer {
+    width: 90%;
+    display: block;
+    border-top: 1px solid; 
+    margin-bottom: 30px;
+}
+
+.fa-facebook,
+.fa-twitter,
+.fa-instagram,
+.fa-location-dot {
+    font-size: 20px;
+}
+
+/* @media */
+@media(max-width: 1000px) {
 
 }
+
+@media(max-width: 599px) {
+    .search {
+
+    }
+
+    .cta_nav {
+       
+    }
+
+    .events-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .circle-conteiner {
+      margin-left: 100px;
+    }
+
+    .events-info,
+    .events-container {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .info-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .welcome-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .gallery-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;  
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 30px;
+        gap: 30px;
+    }
+
+    .exhibition-container, 
+    .explore-container {
+        display: flex;
+        flex-direction: column;
+        max-width: 500px;
+
+    }
+
+    .line-exhibition-container,
+    .line-explore-container {
+        display: none;
+    }
+
+    .visit-container,
+    .visit-food-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contact-info-conteiner {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
