--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,12 @@ header, footer {
 }
 
 /* Home header */
-.menu-checkbox, .hamburger-icon {
-    display: none;
+#menu-checkbox, .hamburger-icon {
+   display: none;
 }
 
 .fa-solid, .fas {
-    font-size: 39px;
+    font-size: 30px;
     color: #00262D;
 }
 
@@ -37,7 +37,8 @@ header, footer {
 .nav, ul {
     display: flex; 
     list-style: none;
-    gap: 20px;
+    gap: 30px;
+    font-size: 20px;
 }
 
 nav a {
@@ -48,21 +49,23 @@ nav a {
 
 .active {
     text-decoration: underline;
+    color: #fb9b50;
+   
 }
 
 .nav-bottom {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .search {
     border-radius: 30px;
-    width: 10%;
+    width: 20%;
     padding: 5px 5px;
-    margin-left: 400px;
     margin-bottom: 15px;
-    height: 20px;
+    height: 25px;
     border-color: #01a1b1;
     font-size: 1em;
 }
@@ -74,8 +77,8 @@ nav a {
     font-size: 18px;
     font-weight: bold;
     border-radius: 30px;
-    padding: 5px 20px 5px 20px;
-    margin-right: 40px;
+    padding: 5px 25px 5px 25px;
+    margin-right: 70px;
     margin-bottom: 15px;
 }
 
@@ -126,13 +129,23 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 20px;
-    padding: 5px 20px 5px 20px;
+    padding: 10px 30px 10px 30px;
     font-weight: bold;
 }
 
 /* Home main */
 .events-container {
+    max-width: 1000px;
     display: flex;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+
 }
 
 .circle-conteiner {
@@ -140,8 +153,8 @@ nav a {
     flex-direction: column;
     padding: 20px;
     border-radius: 50%;
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     background-color:#01a1b1;
     color:#ffffff;
     margin-bottom: 30px;
@@ -159,21 +172,31 @@ nav a {
     margin: 0px;
 }
 
+.circle-text>h1> {
+font-size: 28px;
+}
+
+.circle-text>p {
+font-size: 20px;
+}
+
 .events-info,
 .events-text {
     flex: 1;
-    margin-top: 40px;
+    margin-top: 60px;
     text-align: center;
-    font-size: 18px;
+    font-size: 19px;
     margin-bottom: 50px;
+    font-weight: 900px;
 }
 
-.events-info>h2 {
-   font-size: 22px;
+.events-info>h2,
+.events_heading {
+   font-size: 26px;
 }
 
 .events-info-line {
-    width: 100%;
+    width: 80%;
     display: block;
     border-top: 1px solid;
     margin-bottom: 5px;
@@ -186,13 +209,13 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 20px;
-    padding: 5px 20px 5px 20px; 
+    padding: 10px 30px 10px 30px; 
     font-weight: bold;
 }
 
 .explore {
     text-align: center; 
-    font-size: 32px;
+    font-size: 36px;
 } 
 
 .info-container {
@@ -211,19 +234,20 @@ nav a {
 }
 
 .text_card {
-    font-size: 22px;  
+    font-size: 26px; 
+    margin-bottom: 10px; 
 }
 
 .line_card {
-    width: 60%;
+    width: 40%;
     display: block; 
     border-top: 1px solid;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
  }
 
 .info_image {
     width: 100%;
-    height: 360px;
+    height: 460px;
     object-fit: cover;
 }
 
@@ -268,8 +292,12 @@ nav a {
     margin-top: 10px;   
 }
 
+.welcome-small-text {
+    font-size: 24px;
+}
+
 .welcome-heading {
-    font-size: 36px;
+    font-size: 42px;
     margin: 0;
 }
 
@@ -292,7 +320,7 @@ nav a {
     flex-direction: row;
     margin-top: 40px;
     padding-top: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
     justify-content: space-around;
     background-color: rgba(1,161,177,.2);
 }
@@ -302,7 +330,7 @@ nav a {
 .fa-utensils,
 .fa-palette {
     color:#01a1b1;
-    font-size: 20px;  
+    font-size: 22px;  
 }
 
 .information-line {
@@ -316,6 +344,7 @@ nav a {
 
 .information-card>p {
     font-weight: bold;
+    font-size: 18px;
     color: #00262D;
 }
 
@@ -378,21 +407,11 @@ margin-bottom: 30px;
     margin-bottom: 10px;
 }
 
-.events-container {
-    max-width: 800px;
-    display: flex;
-    margin: 0 auto;     
-}
-
 .line-events {
-    width: 100%;
+    width: 70%;
     display: block;
     border-top: 2px solid;
     color: #01a1b1;
-}
-
-.cta_events {
- 
 }
 
 /* Exhibition spaces, Explore main */
@@ -426,13 +445,12 @@ margin-bottom: 30px;
 
 .exhibition-text,
 .explore-text {
-    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     flex: 1;
     text-align: center;
     justify-content: center;
-    padding: 20px 50px 20px 50px;
+    padding: 40px 50px 40px 50px;
     font-size: 18px;
     background-color: #ffffff;
     max-height: 500px;
@@ -459,14 +477,26 @@ margin-bottom: 30px;
     width: 96%;
     display: block;
     border-top: 1px solid;
-    margin-bottom: 30px;
-    margin-top: 30px;  
+    margin-bottom: 50px;
+    margin-top: 50px;  
 }
 
 .cta-item {
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    gap: 20px;
+}
+
+.cta-back {
+    color:#fb9b50;
+    background-color: #ffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 20px;
+    padding: 5px 40px 5px 40px; 
+    font-weight: bold;
+
 }
 
 .cta-tickets {
@@ -491,6 +521,10 @@ margin-bottom: 30px;
     margin: 0px;
 }
 
+.visit-open {
+
+}
+
 .visit-info,
 .visit-food-info {
     flex: 1;
@@ -499,7 +533,7 @@ margin-bottom: 30px;
 
 .visit_image {
     width: 100%;
-    height: 600px;
+    height: 557px;
 }
 
 .line-visit {
@@ -514,7 +548,9 @@ margin-bottom: 30px;
     display: flex;
     max-width: 1000px;
     margin: 0 auto;
+   
 }
+
 
 .contact-info-content {
     flex: 1;
@@ -539,6 +575,8 @@ margin-bottom: 30px;
 
 .contact-image {
     width: 100%;
+    height: 596px;
+
 }
 
 .contact-input-style {
@@ -560,11 +598,17 @@ input, textarea, select {
     background-color: #fb9b50;
     height: 40px;
     width: 110px;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 .fa-at,
 .fa-phone-volume,
-.fa-clock {
+.fa-clock,
+.fa-facebook,
+.fa-twitter,
+.fa-instagram,
+.fa-location-dot {
     font-size: 20px;
 }
 
@@ -590,27 +634,27 @@ input, textarea, select {
     display: block;
     margin: 0;
     padding:0; 
+    font-size: 20px;
+ }
+
+ li>a,
+ .icon {
+    text-decoration: none;
+    color: #00262D;
+    font-size: 20px;
  }
 
 .help {
     color: #00262D;  
     flex: 1; 
-    line-height: 1.6;
+    line-height: 1,6;
  }
 
-.follow-us {
-    flex: 1; 
-    line-height: 1.6; 
-}
-
+.follow-us,
 .visit-us {
     flex: 1; 
     line-height: 1.6;
-}  
-
-.icon  {
-    text-decoration: none;
-    color:#00262D;
+    font-size: 20px; 
 }
 
 .line-footer {
@@ -620,12 +664,6 @@ input, textarea, select {
     margin-bottom: 30px;
 }
 
-.fa-facebook,
-.fa-twitter,
-.fa-instagram,
-.fa-location-dot {
-    font-size: 20px;
-}
 
 /* @media */
 @media(max-width: 1241px) {
@@ -633,6 +671,11 @@ input, textarea, select {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 50px;
+    }
+
+    .gallery-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;  
     }
 
     .info-card {
@@ -647,7 +690,7 @@ input, textarea, select {
 
 }
 
-@media(max-width: 1094px) {
+@media(max-width: 949px) {
     .exhibition-container, 
     .explore-container {
         display: flex;
@@ -656,21 +699,62 @@ input, textarea, select {
     }
 }
 
-
-@media(max-width: 599px) {
+@media(max-width: 867px) {
     .events-container {
-        display: flex;
         flex-direction: column;
     }
+}
 
-    .circle-conteiner {
-      margin-left: 100px;
+@media(max-width: 815px) {
+    .cta_nav {
+        margin-left: 30px;
+    }
+}
+
+    .search {
+        flex-wrap: wrap;
+        margin-left: 30px;
+}
+
+@media(max-width: 699px) {
+    
+    .hamburger-icon {
+        display: inline-block; 
+        padding-left: 10px; 
+    }
+
+    #menu-checkbox:checked ~ .nav-bottom {
+        display: block;
+    }
+
+    .nav-ul {
+        flex-wrap: wrap;
+        display: block;
+        background-color:#00262D;
+        text-align: center;
+        margin-bottom: 0; 
+    }
+
+    nav a {
+      color:#ffffff;
+    }
+
+    .search, 
+    .cta_nav,
+    .nav-bottom {
+        display: none;
     }
 
     .events-info,
     .events-container {
+        flex-direction: column;
         margin-left: 30px;
-        margin-right: 30px;
+        margin-right: 30px; 
+    }
+
+    .events-text {
+       flex-direction: column;
+
     }
 
     .info-container {
@@ -678,22 +762,20 @@ input, textarea, select {
         flex-direction: column;
     }
 
+    .info-card {
+        margin: 0 auto;
+        width: 1000px;
+    }
+
     .welcome-container {
         display: flex;
         flex-direction: column;
+       
     }
-
 
     .gallery-container {
         display: grid;
-        grid-template-columns: 1fr 1fr;  
-    }
-
-    .footer-container {
-        display: flex;
-        flex-direction: column;
-        margin-left: 30px;
-        gap: 30px;
+        grid-template-columns: 1fr;  
     }
 
     .exhibition-container, 
@@ -701,6 +783,7 @@ input, textarea, select {
         display: flex;
         flex-direction: column;
         max-width: 500px;
+  
     }
 
     .line-exhibition-container,
@@ -718,5 +801,30 @@ input, textarea, select {
         display: flex;
         flex-direction: column;
     }
+
+}
+
+    @media(max-width: 795px) {
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 30px;
+        gap: 30px;
+    }
+}
+
+@media(max-width: 867px) {
+
+
+.circle-conteiner {
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+.exhibition-container, 
+.explore-container {
+    margin: 0 auto;   
+}
+
 }
 
