--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
     font-family: "lato", Arial, Helvetica, sans-serif;
     line-height: 1.5; 
     background-color: #f3f4f4;
+ 
 }
 
 header, footer {
@@ -135,7 +136,8 @@ nav a {
 
 /* Home main */
 .events-container {
-    max-width: 1000px;
+max-width: 100%;
+height: 500px;
     display: flex;
     margin: 0 auto;
     background-color: #ffffff;
@@ -148,7 +150,7 @@ nav a {
 
 }
 
-.circle-conteiner {
+.circle-container {
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -162,6 +164,7 @@ nav a {
     position: relative;
     margin-right: 120px;
     margin-top: 40px;
+flex: 1;
 }
 
 .circle-text {
@@ -170,14 +173,15 @@ nav a {
     left: 50%;
     transform: translate(-50%,-50%);
     margin: 0px;
+flex: 1;
 }
 
 .circle-text>h1> {
-font-size: 28px;
+    font-size: 28px;
 }
 
 .circle-text>p {
-font-size: 20px;
+    font-size: 20px;
 }
 
 .events-info,
@@ -193,6 +197,7 @@ font-size: 20px;
 .events-info>h2,
 .events_heading {
    font-size: 26px;
+   margin-bottom: 10px;
 }
 
 .events-info-line {
@@ -355,9 +360,9 @@ font-size: 20px;
 .explore-heading,
 .contact-us-heading,
 .visit-heading  {
-text-align: center;
-font-size: 32px;
-margin-bottom: 30px;
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 30px;
 }
 
 .line-events-heading,
@@ -403,7 +408,7 @@ margin-bottom: 30px;
 /* Events main */
 .events_heading {
     text-align: center;
-    font-size: 24px;
+    font-size: 26px;
     margin-bottom: 10px;
 }
 
@@ -547,10 +552,8 @@ margin-bottom: 30px;
 .contact-info-conteiner {
     display: flex;
     max-width: 1000px;
-    margin: 0 auto;
-   
+    margin: 0 auto; 
 }
-
 
 .contact-info-content {
     flex: 1;
@@ -666,21 +669,16 @@ input, textarea, select {
 
 
 /* @media */
-@media(max-width: 1241px) {
+@media(max-width: 1304px) {
     .info-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 50px;
+        gap: 20px;
     }
 
     .gallery-container {
         display: grid;
         grid-template-columns: 1fr 1fr;  
-    }
-
-    .info-card {
-        max-width: 500px;
-        margin-left: 50px;
     }
 
     .welcome-container {
@@ -700,6 +698,19 @@ input, textarea, select {
 }
 
 @media(max-width: 867px) {
+    .circle-conteiner {
+         flex-wrap: wrap;
+         margin: 0 auto;
+    }
+
+    .exhibition-container, 
+    .explore-container {
+        margin: 0 auto;   
+    }
+    
+    }
+
+@media(max-width: 867px) {
     .events-container {
         flex-direction: column;
     }
@@ -714,6 +725,15 @@ input, textarea, select {
     .search {
         flex-wrap: wrap;
         margin-left: 30px;
+}
+
+@media(max-width: 795px) {
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 30px;
+        gap: 30px;
+    }
 }
 
 @media(max-width: 699px) {
@@ -736,7 +756,7 @@ input, textarea, select {
     }
 
     nav a {
-      color:#ffffff;
+       color:#ffffff;
     }
 
     .search, 
@@ -758,13 +778,13 @@ input, textarea, select {
     }
 
     .info-container {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr;
     }
 
     .info-card {
         margin: 0 auto;
-        width: 1000px;
+        width: 500px;
     }
 
     .welcome-container {
@@ -782,7 +802,7 @@ input, textarea, select {
     .explore-container {
         display: flex;
         flex-direction: column;
-        max-width: 500px;
+        max-width: 400px;
   
     }
 
@@ -804,27 +824,29 @@ input, textarea, select {
 
 }
 
-    @media(max-width: 795px) {
-    .footer-container {
-        display: flex;
-        flex-direction: column;
-        margin-left: 30px;
-        gap: 30px;
+@media(max-width: 538px) {
+    .welcome-heading {
+        font-size: 22px;
     }
-}
+    .welcome-small-text {
+        font-size: 18px;
+        }
+    }
+    
+@media(max-width: 399px) {
+    .events-text,    
+    .explore-text,
+    .exhibition-text {
+        font-size: 16px;
+   }
 
-@media(max-width: 867px) {
+    .events-info>p {
+        font-size: 16px;
+   }
 
-
-.circle-conteiner {
-    flex-wrap: wrap;
-    margin: 0 auto;
-}
-
-.exhibition-container, 
-.explore-container {
-    margin: 0 auto;   
-}
-
+   .visit_image {
+  
+   }
+     
 }
 
