--- a/css/styles.css
+++ b/css/styles.css
@@ -137,12 +137,12 @@ nav a {
 /* Home main */
 .events-container {
 max-width: 100%;
-height: 500px;
+min-height: 500px;
     display: flex;
     margin: 0 auto;
     background-color: #ffffff;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-bottom: 20px;
     padding-top: 20px;
     margin-top: 40px;
@@ -164,7 +164,7 @@ height: 500px;
     position: relative;
     margin-right: 120px;
     margin-top: 40px;
-flex: 1;
+
 }
 
 .circle-text {
@@ -173,7 +173,7 @@ flex: 1;
     left: 50%;
     transform: translate(-50%,-50%);
     margin: 0px;
-flex: 1;
+    
 }
 
 .circle-text>h1> {
@@ -192,6 +192,7 @@ flex: 1;
     font-size: 19px;
     margin-bottom: 50px;
     font-weight: 900px;
+  
 }
 
 .events-info>h2,
@@ -216,6 +217,8 @@ flex: 1;
     border-radius: 20px;
     padding: 10px 30px 10px 30px; 
     font-weight: bold;
+    display:inline-block;
+    margin-top: 15px;
 }
 
 .explore {
@@ -362,7 +365,6 @@ flex: 1;
 .visit-heading  {
     text-align: center;
     font-size: 32px;
-    margin-bottom: 30px;
 }
 
 .line-events-heading,
@@ -373,8 +375,7 @@ flex: 1;
     width: 60%;
     display: block;
     border-top: 1px solid;
-    margin-bottom: 30px;
-    margin-top: 30px;
+    margin-bottom: 30px;   
 }
 
 .line-gallery-heading {
@@ -522,12 +523,12 @@ flex: 1;
     margin: 0 auto;
 }
 
-.figure {
-    margin: 0px;
+.visit-info>p {
+    margin: 2px;
 }
 
-.visit-open {
-
+.figure {
+    margin: 0px;
 }
 
 .visit-info,
