--- a/css/styles.css
+++ b/css/styles.css
@@ -555,6 +555,8 @@ max-height: 600px;
 .visit-food-info {
     flex: 1;
     padding: 20px;
+    margin-left: 20px;
+    max-width: 500px;
 }
 
 .visit-food-info>p {
@@ -563,7 +565,8 @@ max-height: 600px;
 
 .visit_image {
     max-width: 100%;
-    height: 557px;
+    height: 776px;
+    object-fit: cover;
 }
 
 .line-visit {
@@ -583,7 +586,7 @@ max-height: 600px;
 .contact-info-content {
     flex: 1;
     padding: 20px;
-    max-width: 500px;
+max-width: 500px;
 }
 
 .contact-info-content>p {
@@ -609,6 +612,7 @@ max-height: 600px;
 .contact-image {
     max-width: 100%;
     height: 557px;
+    object-fit: cover;
 }
 
 .contact-input-style {
@@ -731,8 +735,8 @@ li>a,
     .events-info,
     .events-text {
         margin-top: 0px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 50px;
+        padding-right: 50px;
 }
 
     .visit-container,
@@ -785,8 +789,8 @@ li>a,
 
     .events-info, 
     .events-text {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 
     .circle-container {
@@ -957,7 +961,8 @@ li>a,
     }
     .circle-container {
         margin: 0 auto;  
-        margin-top: 30px;
+        width: 250px;
+        height: 250px;
 }
 
     .events-info,
@@ -997,7 +1002,7 @@ li>a,
     .contact-us-heading,
     .visit-heading,
     .explore {
-        font-size: 26px;
+        font-size: 24px;
     }
 
     .events-text,    
